--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: examR
 Type: Package
 Title: What the Package Does (Title Case)
-Version: 0.1.5
+Version: 0.1.6
 Author: Who wrote it
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
@@ -21,7 +21,8 @@ Imports:
     stringr,
     dplyr,
     purrr,
-    httpuv
+    httpuv,
+    gh
 RoxygenNote: 7.1.1
 Remotes: 
     tpemartin/gitterhub,
