--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(check_githubViolation)
 export(check_status)
+export(exam_authentication)
 export(getLastActivityTimeOfAllRooms)
 export(openToolkits)
 export(restoreExam)
